[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyopenrivercam"
authors = [
  { name = "Hessel Winsemius", email = "winsemius@rainbowsensing.com" },
]
packages = [
    { include = "pyorc" }
]

dependencies = [
        "click",
        "cython; platform_machine == 'armv7l'",
        "dask",
        "descartes",
        "flox",
        "geojson",
        "geopandas",
        "matplotlib",
        "netCDF4",
        "numba",
        "numpy>=1.23, <2",  # pin version to ensure compatibility with C-headers
        "opencv-python",
        "openpiv",
        "packaging; platform_machine == 'armv7l'",
        "pip",
        "pyproj",
        "pythran; platform_machine == 'armv7l'",
        "pyyaml",
        "rasterio",
        "scikit-image",
        "scipy",
        "shapely",
        "tqdm",
        "typeguard",
        "xarray"
]

requires-python =">=3.9"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dynamic = ['version', 'description']

[project.optional-dependencies]
io = [
]
extra = [
    "cartopy",
    "notebook"
]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx==5.3",  # >6.0 causes bug in pydata_sphinx_theme
    "sphinx_autosummary_accessors",
    "sphinxcontrib-programoutput",
    "sphinx_rtd_theme",
    "sphinx-design",
    "pydata_sphinx_theme",
    "ipykernel",
    "nbsphinx",
    "sphinx-gallery",
    "pandoc",
    "matplotlib",
]

full = ["pyopenrivercam[io,extra,dev,test,doc]"]
slim = ["pyopenrivercam[io]"]

[project.urls]
Source = "https://github.com/localdevices/pyorc"

[project.scripts]
pyorc = "pyorc.cli.main:cli"

[tool.flit.sdist]
include = ["pyorc"]

[tool.flit.module]
name = "pyorc"
